fix: adjust spacing for each section

--- a/src/styles/1-tokens/theme-light/primitives/spacing.css
+++ b/src/styles/1-tokens/theme-light/primitives/spacing.css
@@ -4,12 +4,11 @@
 
 @theme {
   --spacing-section-xs: clamp(24px, 8vw, 54px);
-  --spacing-section-sm: clamp(30px, 8vw, 60px);
+  --spacing-section-sm: clamp(36px, 8vw, 60px);
   --spacing-section-md: clamp(60px, 12vw, 90px);
   --spacing-section-lg: clamp(60px, 12vw, 110px);
   --spacing-section-xl: clamp(90px, 16vw, 130px);
   --spacing-section-2xl: clamp(130px, 20vw, 190px);
-
 
   --spacing-xxs: 0.375rem; /* 6px */
   --spacing-xs: 0.625rem;  /* 10px */
